can query data, unfind the better way to export the html code

--- a/conf/SEP.DataListener.ini
+++ b/conf/SEP.DataListener.ini
@@ -1,2 +1,2 @@
 [web.five]
-RootURL = http://www.xmsmjk.com/UrpOnline/Home/Index/75_____1
+RootURL = http://www.xmsmjk.com/UrpOnline/Home/GetIndexList ;http://www.xmsmjk.com/UrpOnline/Home/Index/75_____1
