can get the html by post

--- a/conf/SEP.DataListener.ini
+++ b/conf/SEP.DataListener.ini
@@ -1,2 +1,5 @@
+[web]
+BufferHold = 750000
+
 [web.five]
 RootURL = http://www.xmsmjk.com/UrpOnline/Home/GetIndexList ;http://www.xmsmjk.com/UrpOnline/Home/Index/75_____1
