--- a/conf/SEP.DataListener.ini
+++ b/conf/SEP.DataListener.ini
@@ -3,3 +3,4 @@ BufferHold = 750000
 
 [web.five]
 RootURL = http://www.xmsmjk.com/UrpOnline/Home/GetIndexList ;http://www.xmsmjk.com/UrpOnline/Home/Index/75_____1
+QueryGap = 4000
